Login/Register overlap fix

--- a/JXTNext.Sitefinity.Widgets.Common/ResourcePackages/Winston/assets/src/project/components/_basic-components.scss
+++ b/JXTNext.Sitefinity.Widgets.Common/ResourcePackages/Winston/assets/src/project/components/_basic-components.scss
@@ -3094,6 +3094,7 @@ address.info-box {
     height: 47px;
     line-height: 49px;
     position: relative;
+    z-index:99;
 
     @media(max-width:767px) {
         line-height: 50px;
